<resources>
    <string name="app_name">MaPPS - Form 11: Annual Follow-up Form - Year 1 (Preconception)</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="end_interview"> اختتام </string>
    <string name="start_interview"> انٽرويو شروع ڪريو </string>
    <string name="Seca"> معلومات براء سڃاڻپ </string>
    <string name="Secb"> گھراڻي متعلق معلومات </string>
    <string name="Secba"> سماجي ۽ معائشي حالات جي معلومات </string>
    <string name="secbb"> گھراڻي جي فوڊانسڪيورٽي کي ماپڻ </string>
    <string name="secc"> Individual information </string>
    <string name="secca"> اجازتنامي جي تصديق </string>
    <string name="seccb"> آبادي جي معلومات </string>
    <string name="seccc"> صحت بابت سوال </string>
    <string name="seccd"> پاڻ کي پرکڻ </string>
    <string name="secce"> فيصلو ڪرڻ </string>
    <string name="seccf"> ويم جي دوران صحت جي جانچ </string>
    <string name="secch"> اضافي خوراڪ جو پرکڻ </string>
    <string name="mp02f"> غذائيت بابت رت جي چڪاس </string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="other">ٻيو ڪو(وضاحت ڪريو)</string>
    <string name="exp">وضاحت ڪريو</string>
    <string name="ot">ٻيو ڪجه</string>
    <string name="dkn">خبر ڪونهي</string>
    <string name="yes">ها</string>
    <string name="no">نه</string>
    <string name="na">لاڳو نه ٿو ٿئي</string>
    <string name="male"> مرد </string>
    <string name="female"> عورت </string>
    <string name="year"> سال </string>
    <string name="month"> مهينو </string>
    <string name="day"> ڏينهن </string>
    <string name="mp02a001"> جواب ڏيندڙ جو نالو </string>
    <string name="mp02a002"> گھر جي سربراه جو نالو </string>
    <string name="mp02a003"> خاندا ن نمبر </string>
    <string name="mp02a004"> شرڪت ڪندڙ جي سڃاڻپ </string>
    <string name="mp02a005"> ڪلسٽر جو نالو </string>
    <string name="mp02a006"> ڳوٺ جو نالو </string>
    <string name="mp02a007"> رابطي لاء نمبر </string>
    <string name="mp02a009"> پهرين تحقيق ڪندڙ جو نالو ۽ سڃاڻپ </string>
    <string name="mp02a010"> ٻئي تحقيق ڪندڙ جو نالو ۽ سڃاڻپ </string>
    <string name="mp02a011"> تاريخ </string>
    <string name="mp02a012"> وقت </string>
    <string name="mp02a013"> زباني رضامندي </string>
    <string name="mp02a014"> انٽرويو جو نتيجو </string>
    <string name="mp02a01401"> پورو ٿيو </string>
    <string name="mp02a01402"> اڌ ۾ ڇڏيو </string>
    <string name="mp02a01403"> انڪار ڪيو </string>
    <string name="mp02a01404"> ٻن دورن کان پوء به ڪير به موجوده نه هو </string>
    <string name="mp02a01405"> لڏي وئي </string>
    <string name="mp02a01406">شرڪت ڪندڙ وفات ڪري ويئي آهي  </string>
    <string name="mp02ba001"> توهان جي گھر ۾ ڪُل ڪيترا ڀاتي رهندا آهن؟ (بالغ ۽ ٻار) </string>
    <string name="mp02ba002"> هي گهرتوهان جوپهنجوآهي يا ڪرائي جوآهي؟ </string>
    <string name="mp02ba00201"> پنهنجو گهر </string>
    <string name="mp02ba00202"> ڪرائي جو گهر </string>
    <string name="mp02ba003"> گهر جو فرش ڇا جو ٺهيل آهي؟ </string>
    <string name="mp02ba00301"> قدرتي فرش مٽي وارو </string>
    <string name="mp02ba00302">ڇيڻن وارو راڳو يا ٿلو </string>
    <string name="mp02ba00303"> سادو فرش ڪاٺ جا تخته </string>
    <string name="mp02ba00304"> کجي يا بانس </string>
    <string name="mp02ba00305"> ڪمل فرش يا ڪاٺ پاليش </string>
    <string name="mp02ba00306"> ڏامر يا ڊسڪ فرش </string>
    <string name="mp02ba00307"> مٽي جو پڪل ٽائيلز </string>
    <string name="mp02ba00308"> سينمٽ </string>
    <string name="mp02ba00309"> قالين </string>
    <string name="mp02ba00310"> سرون </string>
    <string name="mp02ba00311"> چادرون </string>
    <string name="mp02ba00312"> ماربل </string>
    <string name="mp02ba004"> توهان جي گهر جي ڇت ڇا جي ٺهيل آهي؟ </string>
    <string name="mp02ba00401"> ڇت ناهي </string>
    <string name="mp02ba00402"> کجي جي پنن جي </string>
    <string name="mp02ba00403"> گاهه جي </string>
    <string name="mp02ba00404"> لوڪل هٿرادو راڳو </string>
    <string name="mp02ba00405"> کجي يا بانس </string>
    <string name="mp02ba00406"> ڪاٺ جا تخته </string>
    <string name="mp02ba00407"> ڪاغذي گتن جي ٺهيل </string>
    <string name="mp02ba00408"> لوهه جي چادرن جي بهترين ٺهيل </string>
    <string name="mp02ba00409"> سيمنٽ جي يا سرن جي ٺهيل </string>
    <string name="mp02ba00410"> فولادي </string>
    <string name="mp02ba00411"> ڪاٺ جي ٺهيل </string>
    <string name="mp02ba00412"> سيمنٽ </string>
    <string name="mp02ba00413"> مٽي جي ڪچيون سرون </string>
    <string name="mp02ba005"> گهرجون ديوارون ڇا جون ٺهيل آهن؟ </string>
    <string name="mp02ba00501"> ڪا به نه </string>
    <string name="mp02ba00502"> ڪمند ي/ کجي/ لڪڙن جي </string>
    <string name="mp02ba00503"> مٽي، چن ۽ گارو </string>
    <string name="mp02ba00504"> مٽي / پٿر </string>
    <string name="mp02ba00505"> بانس جا ڏنڍا ۽ مٽي </string>
    <string name="mp02ba00506"> علاقائي مٽي جون ڪچيون سرون </string>
    <string name="mp02ba00507"> دٻن يا پلاسٽڪ </string>
    <string name="mp02ba00508"> بانس ۽ مٽي </string>
    <string name="mp02ba00509"> پٿر مٽي سان </string>
    <string name="mp02ba00510"> غير متوازي </string>
    <string name="mp02ba00511"> ڪاٺ جون چادرون </string>
    <string name="mp02ba00512"> ڪاغذي گتا </string>
    <string name="mp02ba00513"> وڻن وارو ڪچو ڪاٺ </string>
    <string name="mp02ba00514"> پڪل سرون </string>
    <string name="mp02ba00515"> تمبو </string>
    <string name="mp02ba00516"> سيمنٽ </string>
    <string name="mp02ba00517"> پٿر ۽ سيمنٽ </string>
    <string name="mp02ba00518"> سرون </string>
    <string name="mp02ba00519"> سيمنٽ جا بلاڪ </string>
    <string name="mp02ba00520"> ڍڪيل پلستر </string>
    <string name="mp02ba00521"> وڻن جون ٽاريون ۽ ريتي </string>
    <string name="mp02ba006"> توهان جي گهر ۾ سمهڻ لاءِ ڪيترا ڪمرا استعمال ٿيندا آهن؟ </string>
    <string name="mp02ba007"> توهان جي گهر ۾ پيئڻ جي پاڻي جو سڀ کاناهم ذريعو ڪهڙو آهي؟ </string>
    <string name="mp02ba00701"> پائپ وارو پاڻي </string>
    <string name="mp02ba00702"> عوامي نلڪو </string>
    <string name="mp02ba00703"> ٽيوب ويل / جر  </string>
    <string name="mp02ba00704"> زمين وارو نلڪوهينڊ پمپ </string>
    <string name="mp02ba00705"> اونهو کوهه </string>
    <string name="mp02ba00706"> چشمي جو پاڻي </string>
    <string name="mp02ba00707"> برساتي پاڻي </string>
    <string name="mp02ba00708"> پاڻي جو ٽينڪر </string>
    <string name="mp02ba00709"> فلٽر پلانٽ </string>
    <string name="mp02ba00710"> کليل پاڻي </string>
    <string name="mp02ba00711"> بوتل وارو پاڻي </string>
    <string name="mp02ba008"> پيئڻ جو پاڻي صاف ڪرڻ لاءِ توهان اڪثر ڪهڙو طريقو استعمال ڪندا آهيو؟ </string>
    <string name="mp02ba00801"> بلڪل به نه </string>
    <string name="mp02ba00802"> اٻاريل </string>
    <string name="mp02ba00803"> ڪلورين مليل </string>
    <string name="mp02ba00804"> ڪپڙي سان صاف ٿيل </string>
    <string name="mp02ba00805"> پاڻي صاف ڪرڻ وارو فلٽر </string>
    <string name="mp02ba00806"> شمسي توانائي سان صاف ٿيل </string>
    <string name="mp02ba00807"> ڍڪي صاف ڪيل </string>
    <string name="mp02ba009"> هن گهر ۾ ڪهڙي قسم جو بيت الخلا يا ليٽرين استعمال ڪيو ويندو آهي؟ </string>
    <string name="mp02ba00901"> فلش يا هٿ سان پاڻي لاهڻ وارو گينڊي وارو ڪاڪوس خانو </string>
    <string name="mp02ba00902"> بنا نالي وارو بيت الخلا يا کڏ وارو </string>
    <string name="mp02ba00903"> هٿرادو ٺهيل بالٽي وارو بيت الخلا </string>
    <string name="mp02ba00904"> ٽنگيل </string>
    <string name="mp02ba00905"> ڪا به نه حاجت لاءِ کليل جڳه تي وڄڻ </string>
    <string name="mp02ba010"> ڇا توهان جو بيت الخلا ٻيا گھر به استعمال ڪندا آهن؟ </string>
    <string name="mp02ba011"> ڪيترا گھر استعمال ڪندا آهن؟ </string>
    <string name="mp02ba012"> توهان پنهنجي گهر ۾ هٿن ڌوئڻ لاء ڇا استعمال ڪندا آهيو؟ </string>
    <string name="mp02ba01201"> صابڻ </string>
    <string name="mp02ba01202"> خاڪ </string>
    <string name="mp02ba01203"> کار يا صرف </string>
    <string name="mp02ba01204"> ڪجهه به نه </string>
    <string name="mp02ba013"> ڇا توهان جي گهر ۾هي شيون آهن؟ </string>
    <string name="mp02ba01301"> بجلي </string>
    <string name="mp02ba01302"> ريڊيو </string>
    <string name="mp02ba01303"> ٽيليويزن </string>
    <string name="mp02ba01304"> فون </string>
    <string name="mp02ba01305"> فرج </string>
    <string name="mp02ba01306"> الماري </string>
    <string name="mp02ba01307"> ڪرسي </string>
    <string name="mp02ba01308"> روم ڪولر </string>
    <string name="mp02ba01309"> اي سي </string>
    <string name="mp02ba01310"> ڪپڙا دوئڻ جي مشين </string>
    <string name="mp02ba01311"> پاڻي جو موٽر پمپ </string>
    <string name="mp02ba01312"> بسترو </string>
    <string name="mp02ba01313"> گهڙيال </string>
    <string name="mp02ba01314"> صوفا </string>
    <string name="mp02ba01315"> ڪيمرا </string>
    <string name="mp02c001"> Participant ID </string>
    <string name="mp02c002"> انٽرويو جو نتيجو </string>
    <string name="mp02c00201"> پورو ٿيو </string>
    <string name="mp02c00202"> اڌ ۾ ڇڏيو </string>
    <string name="mp02c00203"> انڪار ڪيو </string>
    <string name="mp02c00204"> ٻن دورن کان پوء ڪير به </string>
    <string name="mp02c00205"> لڏي وئي </string>
    <string name="mp02c00206"> پڙهائي يا ٻئي سبب جي ڪري شهر يا ڳوٺ کان ٻاهر رهڻ </string>
    <string name="mp02c00207"> عورت اڄ گهر ۾ موجود نه آهي </string>
    <string name="mp02gh"> Access to LHWs </string>
    <string name="mp02g01"> ليڊي هيلٿ ورڪر توهان جي گهر آخري دفعو ڪڏهن آئي </string>
    <string name="mp02g01a"> ڏينهن </string>
    <string name="mp02g01b"> مهينا </string>
    <string name="mp02g01c"> ڪڏنهن ناهي آئي </string>
    <string name="mp02g02"> ليڊي هيلٿ ورڪر ڪڏهن ڪڏهن توهان جي گهر ايندي آهي </string>
    <string name="mp02g02a"> هفتيوار </string>
    <string name="mp02g02b"> چوڏهن ڏينهن کان پوء </string>
    <string name="mp02g02c"> ماهوار </string>
    <string name="mp02g02d"> ڪڏهن ڪڏهن </string>
    <string name="mp02g02e"> صرف پوليو لاء </string>
    <string name="mp02g02f"> يا ڪو ٻيو </string>
    <string name="mp02g03"> ليڊي هيلٿ ورڪر توهان جي گهر آخري دفعو ڪهڙي مقصد لاء آئي هُئي ؟ </string>
    <string name="mp02g03a"> ماء ۽ ٻار جي صحت بابت ڄاڻ ڏيڻ </string>
    <string name="mp02g03b"> وقفي جو گوريون ڏيڻ </string>
    <string name="mp02g03c"> اسپتال منتقل ٿيڻ جو چوڻ لاء </string>
    <string name="mp02g03d"> تُڪا </string>
    <string name="mp02g03e"> پوليو </string>
    <string name="mp02g03f"> ماء جي غلاج لاء </string>
    <string name="mp02g03g"> ٻار جي غلاج لاء </string>
    <string name="mp02g03h">MMN/IFA supply</string>
    <string name="mp02g04"> ليڊي هيلٿ ورڪر آخري دفعو صحت بابت ڄاڻ ڏيڻ لاء ڪڌهن گڏجاڻي ڪئي ؟ </string>
    <string name="mp02g04a"> گزريل مهيني </string>
    <string name="mp02g04b"> گزريل ٽن مهينن دوران </string>
    <string name="mp02g04c"> گزريل ڇهن مهينن  ۾ </string>
    <string name="mp02g0497"> ڪڏهن به نه </string>
    <string name="mp02g05"> ڇا توهان ڪڏهن به  صحت متعلق ڪنهن گڏجاڻي ۾ ويا آهيو ؟ </string>
    <string name="mp02g06"> ڪڏهن ڪڏهن اڪثر توهان جو اهڙين گڏجاڻين ۾ وڃڻ ٿيو آهي </string>
    <string name="mp02g06a"> هر مهيني </string>
    <string name="mp02g06b"> گزريل ٽن مهينن ۾ </string>
    <string name="mp02g06c"> گزريل ڇهن مهينن ۾ </string>
    <string name="mp02g06d"> سال ۾ هڪ دفعو </string>
</resources>