<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_section_c"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.aku.hassannaqvi.mapps_form2.activities.SectionCActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/secc"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:text="@string/mp02c001"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/mp02c001"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/gray"
                android:padding="2dp"
                android:text="Name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:text="@string/mp02c002"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <RadioGroup
                android:id="@+id/mp02c002"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/mp02c00201"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mp02c00201" />

                <RadioButton
                    android:id="@+id/mp02c00202"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mp02c00202" />

                <RadioButton
                    android:id="@+id/mp02c00203"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mp02c00203" />

                <RadioButton
                    android:id="@+id/mp02c00204"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mp02c00204" />

                <RadioButton
                    android:id="@+id/mp02c00205"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mp02c00205" />

                <RadioButton
                    android:id="@+id/mp02c00206"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mp02c00206" />

                <RadioButton
                    android:id="@+id/mp02c00207"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mp02c00207" />

            </RadioGroup>

            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="endInterview"
                    android:padding="2dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/end_interview"
                    android:textColor="#ff1e1e" />

                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->

                <!--<Button-->
                    <!--android:id="@+id/btn_Continue"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:onClick="startInterview"-->
                    <!--android:padding="2dp"-->
                    <!--android:text="@string/start_interview"-->
                    <!--android:textColor="@color/colorPrimaryDark" />-->
                <!--'onClick' for btn_Continue will call next section form e.g.: openSection2-->

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
